--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mysql": "^2.18.1",
     "react-router-dom": "^6.11.0"
   },
   "devDependencies": {
@@ -21,6 +22,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.1"
+    "vite": "^4.3.4"
   }
 }
